Added --enable-preview param